# cloud2mask

./: CMakeLists.txt  README.md  package.xml
launch/: sample_cloud2mask.launch
script/: cloud_to_mask.py
